# rightsideup

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/autorotate/: __main__.py  cli.py  engine.py  io.py  types.py  utils.py
src/autorotate/detectors/: opencv_human.py  opencv_lines.py  tesseract.py  yolo.py
